# mplgallery

./: .gitignore  AGENTS.md  LICENSE  README.md  hatch_build.py  plot_gallery_package_ui_handoff.md  pyproject.toml
.codex/environments/: environment.toml
.github/workflows/: ci.yml  release.yml
docs/: development_environment.md  mplgallery_browser_first_handoff_plan.md  mplgallery_codex_bootstrap_master_plan.md
docs/goals/tauri-react-overhaul/: goal.md  state.yaml
docs/goals/tauri-react-overhaul/notes/: T001-repo-map.md  T002-tauri-data-contract.md
examples/architecture_project/: README.md
examples/architecture_project/analyses/response_study/: analysis.yaml
examples/distribution_plots_project/: README.md
examples/distribution_plots_project/.mplgallery/: manifest.yaml
examples/distribution_plots_project/data/raw/: category_counts_raw.csv  residuals_raw.csv
examples/distribution_plots_project/scripts/: generate_data.py  render_plots.py
examples/generic_plots_project/: README.md
examples/generic_plots_project/.mplgallery/: manifest.yaml
examples/generic_plots_project/scripts/: generate_data.py  render_plots.py
examples/install_smoke_project/: README.md
examples/install_smoke_project/.mplgallery/: manifest.yaml
examples/install_smoke_project/scripts/: generate_data.py  render_plots.py
examples/plot_set_project/scripts/: generate_results.py  render_figures.py
examples/plot_types_project/: README.md
examples/plot_types_project/plots/: barh.csv  hist.csv  line.csv
examples/plot_types_project/scripts/: generate_plot_types.py
examples/sample_project/.mplgallery/: manifest.yaml
examples/sample_project/data/: experiment_001.csv  experiment_002.csv
examples/sample_project/scripts/: generate_data.py  generate_plots.py  render_plots.py
examples/subplot_management_project/: README.md
examples/subplot_management_project/.mplgallery/: manifest.yaml
examples/subplot_management_project/scripts/: generate_data.py  render_plots.py
scripts/: build_windows_dist.py  dev.ps1  install_windows_app.cmd  install_windows_app.ps1  run_windows_setup.cmd
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/mplgallery/: __init__.py  __main__.py  cli.py  desktop.py  preview_server.py  updater.py
src/mplgallery/assets/: __init__.py
src/mplgallery/core/: __init__.py  associations.py  backups.py  config.py  importers.py  manifest.py  models.py  pandas_plotting.py  paths.py  plot_sets.py  recipes.py  renderer.py  scanner.py  studio.py  user_settings.py
src/mplgallery/integrations/: __init__.py  dvc.py  mlflow.py
src/mplgallery/ui/: app.py  component.py  pages.py  root_state.py  state.py  streamlit_shim.py
tests/: test_associations.py  test_csv_studio.py  test_desktop.py  test_examples_plot_set_layout.py  test_importers.py  test_manifest_workflow.py  test_packaging.py  test_pandas_plotting.py  test_plot_sets.py  test_renderer.py  test_scanner.py  test_updater.py  test_user_settings.py
(+61 files in other folders)
