[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "mplgallery"
version = "0.1.0"
description = "Local-first Matplotlib plot gallery for CSV-generated PNG/SVG plots."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Tanner" }
]
dependencies = [
  "streamlit>=1.35",
  "numpy>=1.26",
  "pandas>=2.0",
  "matplotlib>=3.8",
  "pydantic>=2.0",
  "pyyaml>=6.0",
  "typer>=0.12",
  "rich>=13.0",
  "pillow>=10.0",
  "mlflow>=2.0",
  "dvc>=3.0"
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "mypy>=1.8",
  "build>=1.2"
]

[project.scripts]
mplgallery = "mplgallery.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mplgallery"]
artifacts = [
  "src/mplgallery/ui/frontend/dist/**",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
