[package]
name = "mplgallery-desktop"
version = "0.1.7"
edition = "2021"

[[bin]]
name = "mplgallery-desktop"
path = "src/main.rs"

[lib]
name = "mplgallery_tauri"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
csv = "1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
walkdir = "2"
